added normal matrix, complex water improving (waves, texture, etc)