@@ -1,18 +1,26 @@
 package dev.overtow.core;
 
 import dev.overtow.graphics.hud.HudElement;
+import dev.overtow.util.Utils;
+import dev.overtow.util.misc.Tuple;
 import org.joml.Matrix4f;
+import org.joml.Quaternionf;
 import org.joml.Vector2i;
 import org.joml.Vector3f;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class Scene {
-    private final List<Actor> actors;
-    private final List<Actor> usualActors;
-    private final List<Actor> waterActors;
+    //    private final List<Actor> actors;
+    private final List<Actor> generalActors;
+    private final List<BoxActor> boxesOnField;
+    private final List<BoxActor> boxesInDispensers;
+    private final WaterActor waterActors;
+//    private final WaterActor water;
 
     private final HudLayout hudLayout;
     //    private final BoxActor lightBox;
@@ -20,22 +28,25 @@ public class Scene {
     private Vector3f lightPosition;
 
     public Scene() {
-        actors = new ArrayList<>();
-        usualActors = new ArrayList<>();
-        waterActors = new ArrayList<>();
+        generalActors = new ArrayList<>();
+        boxesInDispensers = new ArrayList<>();
+        boxesOnField = new ArrayList<>();
         for (int i = 0; i < 30; i++) {
-            usualActors.add(new BoxActor(new Vector2i(-7 + i / 10, -4 + i % 10)));   // left
-            usualActors.add(new BoxActor(new Vector2i(-4 + i % 10, -7 + i / 10)));   // top
-            usualActors.add(new BoxActor(new Vector2i(6 + i / 10, -4 + i % 10)));    // right
-            usualActors.add(new BoxActor(new Vector2i(-4 + i % 10, 6 + i / 10)));   // bottom
+            boxesInDispensers.add(new BoxActor(new Vector2i(-7 + i / 10, -4 + i % 10)));   // left
+            boxesInDispensers.add(new BoxActor(new Vector2i(-4 + i % 10, -7 + i / 10)));   // top
+            boxesInDispensers.add(new BoxActor(new Vector2i(6 + i / 10, -4 + i % 10)));    // right
+            boxesInDispensers.add(new BoxActor(new Vector2i(-4 + i % 10, 6 + i / 10)));   // bottom
         }
+
+        boxesOnField.add(new BoxActor(new Vector2i(-2, 3)));
+        boxesOnField.add(new BoxActor(new Vector2i(1, -4)));
 //        lightBox = new BoxActor(new Vector2i(0, 0));
 //        actors.add(lightBox);
-        usualActors.add(new PoolActor());
-        waterActors.add(new WaterActor());
+        generalActors.add(new PoolActor());
+        waterActors = new WaterActor();
 
-        actors.addAll(usualActors);
-        actors.addAll(waterActors);
+//        actors.addAll(usualActors);
+//        actors.addAll(waterActors);
 
         hudLayout = new HudLayout();
 
@@ -56,34 +67,35 @@ public class Scene {
         lightPosition = new Vector3f(6.0f, lightHeight, 6.0f);
         Vector3f lightLookAt = new Vector3f(0.5f, 0.0f, 0.5f);
         Vector3f UP = new Vector3f(0.0f, 1.0f, 0.0f);
-        double alpha = System.currentTimeMillis() / 2000.0;
+        double alpha = Utils.getTime() / 3;
         float x = (float) Math.sin(alpha);
         float z = (float) Math.cos(alpha);
         lightPosition.set(lightDistance * x, lightHeight + (float) Math.sin(alpha), lightDistance * z);
-//        lightBox.setPosition(lightPosition);
         light.setPerspective((float) Math.toRadians(90), 1.0f, 0.1f, 40.0f)
                 .lookAt(lightPosition, lightLookAt, UP);
 
         hudLayout.update();
-    }
 
-//    public List<Actor> getActors() {
-//        return Collections.unmodifiableList(actors);
-//    }
+        float time = Utils.getTime();
+        for (BoxActor actor : boxesOnField) {
+            Tuple<Vector3f, Quaternionf> wavesShift = waterActors.getWavesShift(actor.getPosition(), time);
+
+            actor.setTemporaryTilt(wavesShift.getT(), wavesShift.getV());
+        }
+    }
 
     public List<HudElement> getHudElements() {
         return Collections.unmodifiableList(hudLayout.getHudElements());
     }
 
-//    public void addActor(Actor actor) {
-//        actors.add(actor);
-//    }
-
     public List<Actor> getUsualActors() {
-        return Collections.unmodifiableList(usualActors);
+        // TODO maybe create smth like a view-list?
+        return Stream.of(generalActors, boxesInDispensers, boxesOnField)
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
     }
 
-    public List<Actor> getWaterActors() {
-        return Collections.unmodifiableList(waterActors);
+    public List<WaterActor> getWaterActors() {
+        return List.of(waterActors);
     }
 }
